--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "firebase": "^9.8.1",
     "node-sass": "^5.0.0",
     "react": "^18.0.0",
